--- a/src/markdown/mas/vergelijking_leefdaal.Rmd
+++ b/src/markdown/mas/vergelijking_leefdaal.Rmd
@@ -837,20 +837,23 @@ opp_leefdaal_df <- leefdaal %>%
   mutate(oppervlakte = st_area(leefdaal)) %>%
   st_drop_geometry() %>%
   units::drop_units() %>%
-  arrange(naam)
+  arrange(naam) %>%
+  mutate(across(.cols = where(is.numeric), .fns = scale))
 
 # Landgebruiksamenstelling
 landgebruik_leefdaal_df <- landgebruik_leefdaal %>%
   pivot_wider(names_from = landgebruik_klasse, values_from = area_prop) %>%
   rename(Grasland_landgebruik = Grasland) %>%
-  arrange(naam)
+  arrange(naam) %>%
+  mutate(across(.cols = where(is.numeric), .fns = scales::rescale))
 
 # Hoofdteelt
 hfdteelten_leefdaal_df <- hfdteelten_leefdaal  %>%
   select(naam, LBLHFDTLT, area_prop) %>%
   pivot_wider(names_from = LBLHFDTLT, values_from = area_prop) %>%
   rename(Grasland_teelt = Grasland) %>%
-  arrange(naam)
+  arrange(naam) %>%
+  mutate(across(.cols = where(is.numeric), .fns = scales::rescale))
 
 # Perceelsgrootte
 percelen_leefdaal_df <- percelen_leefdaal %>%
@@ -859,12 +862,14 @@ percelen_leefdaal_df <- percelen_leefdaal %>%
   units::drop_units() %>%
   group_by(naam) %>%
   summarise(perceelsgrootte = median(oppervlakte)) %>%
-  arrange(naam)
+  arrange(naam) %>%
+  mutate(across(.cols = where(is.numeric), .fns = scale))
   
 # Openheid landschap
 openheid_leefdaal_df <- openheid_leefdaal %>%
   pivot_wider(names_from = openheid_klasse, values_from = area_prop) %>%
-  arrange(naam)
+  arrange(naam) %>%
+  mutate(across(.cols = where(is.numeric), .fns = scales::rescale))
   
 # Complete dataset
 df_list <- list(opp_leefdaal_df, landgebruik_leefdaal_df, 
@@ -895,8 +900,7 @@ arrow_style <- arrow(
 #### Oppervlakte van gebied en perceelsgrootte
 
 ```{r}
-pca_opp <- prcomp(leefdaal_multivar %>% select(perceelsgrootte, oppervlakte), 
-                  center = TRUE, scale = TRUE)
+pca_opp <- prcomp(leefdaal_multivar %>% select(perceelsgrootte, oppervlakte))
 ```
 
 De eerste PC verklaart quasi alle variatie in de data. 
@@ -935,8 +939,7 @@ conclusie_df <- rbind(conclusie_df,
 
 ```{r}
 pca_landgebruik <- prcomp(landgebruik_leefdaal_df %>% 
-                            column_to_rownames(var = "naam"), 
-                          center = TRUE, scale = TRUE)
+                            column_to_rownames(var = "naam"))
 ```
 
 De eerste PC verklaart een kleine 2/3 en de tweede PC een dikke 1/3 van alle variatie in de data. 
@@ -970,8 +973,7 @@ Deze resultaten zijn in overeenstemming met onze eerdere conclusies in \@ref(lan
 
 ```{r}
 pca_hoofdteelten <- prcomp(hfdteelten_leefdaal_df %>% 
-                             column_to_rownames(var = "naam"), 
-                           center = TRUE, scale = TRUE)
+                             column_to_rownames(var = "naam"))
 ```
 
 De eerste PC verklaart een kleine 2/3 en de tweede PC een dikke 1/3 van alle variatie in de data. 
@@ -1004,8 +1006,7 @@ Deze resultaten zijn in overeenstemming met onze eerdere conclusies in \@ref(tee
 
 ```{r}
 pca_openheid <- prcomp(openheid_leefdaal_df %>% 
-                         column_to_rownames(var = "naam"), 
-                       center = TRUE, scale = TRUE)
+                         column_to_rownames(var = "naam"))
 ```
 
 De eerste PC verklaart quasi alle variatie in de data. 
@@ -1039,7 +1040,7 @@ Deze resultaten zijn in overeenstemming met onze conclusie in \@ref(openheid). D
 We voeren nu ook een PCA uit op de dataset met alle variabelen samen.
 
 ```{r}
-pca_fit <- prcomp(leefdaal_multivar, center = TRUE, scale = TRUE)
+pca_fit <- prcomp(leefdaal_multivar)
 ```
 
 De eerste PC verklaart een kleine 2/3 van de variatie in de data en de tweede as een dikke 1/3.
